2012-01-30 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Implemented partial refactoring of tx_displaycontroller::main(), resolves #33527

2012-01-21 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Moved debug output to a separate class, made it configurable, resolves #33360

2012-01-16 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Removed all mentions of contexts from the manual, updated the hooks list, resolves #33223
	* Added Kint to dump debug data instead of t3lib_utility_Debug::debug(), resolves #33174

2012-01-13 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Enhanced error reporting, resolves #1695
	* Implemented new base class for pi-based controllers, resolves #33187

2012-01-12 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Implemented new message queue API, resolves #33149

2012-01-08 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Implemented initialization of components using the new Tesseract API, resolves #33050

2011-12-28 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Changed compatibility check between Primary Data Provider and Data Consumer, resolves #32863

2011-08-16 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released to TER as version 1.1.0

2011-07-29 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Adapted layout of content element fields to match TYPO3 4.5 UI, resolves #28572

2011-07-18 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Changed empty filter check to use new API, resolves #28288

2011-05-18 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released to TER as version 1.0.2

2011-05-16 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected handling of components relations in workspaces, resolves #26828

2011-03-20 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Removed dependency on extensions load order for allowed property, resolves #13929

2010-12-28 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released to TER as version 1.0.1

2010-12-20 Francois Suter (Cobweb)  <typo3@cobweb.ch>
